# medigo_server

./: .gitignore  README.md  pyproject.toml  test.py
src/medigo_server/: main.py
src/medigo_server/common/: enums.py
src/medigo_server/config/: config.py
src/medigo_server/core/decorators/: __init__.py  crud_exceptions.py
src/medigo_server/database/: __init__.py  file_bucket_db.py
src/medigo_server/models/: __init__.py
src/medigo_server/models/api_models/: api_models.py
src/medigo_server/models/category_model/: category_model.py
src/medigo_server/models/product_model/: product_model.py
src/medigo_server/repositories/: __init__.py
src/medigo_server/repositories/category_repository/: category_repository.py
src/medigo_server/repositories/product_repository/: product_repository.py
src/medigo_server/routers/: __init__.py
src/medigo_server/routers/v1/: __init__.py
src/medigo_server/routers/v1/category_router/: category_router.py
src/medigo_server/routers/v1/product_router/: product_router.py
src/medigo_server/schemas/: __init__.py
src/medigo_server/schemas/api_dto/: api_dto.py
src/medigo_server/schemas/category_dto/: category_dto.py
src/medigo_server/schemas/product_dto/: product_dto.py
src/medigo_server/service/: __init__.py
src/medigo_server/service/category_service/: category_service.py
src/medigo_server/service/product_service/: product_service.py
src/medigo_server/utils/: __init__.py
src/medigo_server/utils/auth/: dependencies.py
